--- a/angular.json
+++ b/angular.json
@@ -26,7 +26,8 @@
               {
                 "input": "src/custom-theme.scss"
               },
-              "src/styles.css"
+              "src/styles.css",
+              "../node_modules/font-awesome/css/font-awesome.css"
             ],
             "scripts": []
           },
