--- a/angular.json
+++ b/angular.json
@@ -26,8 +26,7 @@
               {
                 "input": "src/custom-theme.scss"
               },
-              "src/styles.css",
-              "../node_modules/font-awesome/css/font-awesome.css"
+              "src/styles.css"
             ],
             "scripts": []
           },
