--- a/package.json
+++ b/package.json
@@ -11,37 +11,34 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "7.1.1",
-    "@angular/cdk": "7.1.0",
-    "@angular/common": "7.1.1",
-    "@angular/compiler": "7.1.1",
-    "@angular/core": "7.1.1",
-    "@angular/forms": "7.1.1",
-    "@angular/http": "7.0.0",
-    "@angular/material": "7.1.0",
-    "@angular/material-moment-adapter": "7.1.0",
-    "@angular/platform-browser": "7.1.1",
-    "@angular/platform-browser-dynamic": "7.1.1",
-    "@angular/router": "7.1.1",
-    "angular-font-awesome": "^3.1.2",
-    "angular-in-memory-web-api": "0.5.4",
-    "core-js": "2.5.7",
-    "font-awesome": "^4.7.0",
-    "hammerjs": "2.0.8",
-    "moment": "2.22.2",
     "rxjs": "6.3.3",
+    "moment": "2.22.2",
+    "core-js": "2.5.7",
+    "zone.js": "0.8.26",
+    "hammerjs": "2.0.8",
+    "@angular/cdk": "7.1.0",
+    "@angular/core": "7.1.1",
+    "@angular/http": "7.0.0",
+    "@angular/forms": "7.1.1",
+    "@angular/common": "7.1.1",
+    "@angular/router": "7.1.1",
+    "@angular/compiler": "7.1.1",
+    "@angular/material": "7.1.0",
     "web-animations-js": "2.3.1",
-    "zone.js": "0.8.26"
+    "@angular/animations": "7.1.1",
+    "@angular/platform-browser": "7.1.1",
+    "angular-in-memory-web-api": "0.5.4",
+    "@angular/material-moment-adapter": "7.1.0",
+    "@angular/platform-browser-dynamic": "7.1.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.10.0",
-    "@angular/cli": "^7.1.3",
+    "@angular/cli": "~7.0.6",
     "@angular/compiler-cli": "~7.0.0",
     "@angular/language-service": "~7.0.0",
-    "@ngtools/webpack": "^1.2.13",
+    "@types/node": "~8.9.4",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~8.9.4",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
