--- a/package.json
+++ b/package.json
@@ -11,25 +11,26 @@
   },
   "private": true,
   "dependencies": {
-    "rxjs": "6.3.3",
-    "moment": "2.22.2",
-    "core-js": "2.5.7",
-    "zone.js": "0.8.26",
-    "hammerjs": "2.0.8",
-    "@angular/cdk": "7.1.0",
-    "@angular/core": "7.1.1",
-    "@angular/http": "7.0.0",
-    "@angular/forms": "7.1.1",
-    "@angular/common": "7.1.1",
-    "@angular/router": "7.1.1",
-    "@angular/compiler": "7.1.1",
-    "@angular/material": "7.1.0",
-    "web-animations-js": "2.3.1",
     "@angular/animations": "7.1.1",
-    "@angular/platform-browser": "7.1.1",
-    "angular-in-memory-web-api": "0.5.4",
+    "@angular/cdk": "7.1.0",
+    "@angular/common": "7.1.1",
+    "@angular/compiler": "7.1.1",
+    "@angular/core": "7.1.1",
+    "@angular/forms": "7.1.1",
+    "@angular/http": "7.0.0",
+    "@angular/material": "7.1.0",
     "@angular/material-moment-adapter": "7.1.0",
-    "@angular/platform-browser-dynamic": "7.1.1"
+    "@angular/platform-browser": "7.1.1",
+    "@angular/platform-browser-dynamic": "7.1.1",
+    "@angular/router": "7.1.1",
+    "angular-in-memory-web-api": "0.5.4",
+    "core-js": "2.5.7",
+    "hammerjs": "2.0.8",
+    "moment": "2.22.2",
+    "rxjs": "6.3.3",
+    "serve": "^10.1.1",
+    "web-animations-js": "2.3.1",
+    "zone.js": "0.8.26"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.10.0",
