--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "lint": "ng lint",
     "e2e": "ng e2e",
     "postinstall": "ng build --prod",
-    "start": "serve -s dist/nexus-client"
+    "start": "serve -s dist/"
   },
   "private": true,
   "dependencies": {
